<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Main!</string>
    <string name="app_name">e云通</string>
    <string name="title">e云通</string>
    <string name="textLeft">Preview</string>
    <string name="textRight">Next</string>
    <string name="total">Total</string>
    <string name="current">Current</string>
    
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="load_more_text">正在加载...</string>
 
    <string name="tip_dialog_loading">加载中...</string>
    <string name="app_host">http://eyt.zptc.cn:8899/rising-zptc-client/</string> 
     <!--<string name="app_host">http://210.32.127.54:9999/rising-zptc-client/</string> -->
    
    
    <!-- 115.239.171.231 --> 
    <string name="url_systemconfig">find_system_config</string>
    <string name="url_login">login</string>
    <string name="url_faqlist">find_help_list</string> 
    
    <string name="url_register">register</string> 
    <string name="url_feedback">feedback_suggestion</string>
    <string name="url_updatepassword">update_password</string>
    
    <string name="url_protocolregister">citrus/temp/protocolRegister.html</string>
    
    <string name="url_verifyregister">send_register_verify_code</string>
    
     
    <string name="url_verifyfindpassword">send_retrieve_password_verify_code</string> 
    <string name="url_verifybindphonenumber">send_bind_mobile_verify_code</string>
     
    <string name="url_findpassword">retrieve_password</string> 
    <string name="url_retrievepagepassword">retrieve_page_password</string>
    <string name="url_retrieveupdatepassword">retrieve_update_password</string>
    <string name="url_bindphonenumber">bind_mobile</string>
    <string name="url_person">find_personal_info</string> 
    <string name="url_account">find_onecard_account_info</string> 
    <string name="url_saveperson">save_personal_info</string> 
    <string name="url_announcelist">find_announce_category_list</string> 
    <string name="url_recruitlist">find_recruit_students_category_list</string> 
    <string name="url_newlist">find_news_category_list</string> 
    <string name="url_employlist">find_obtain_employment_category_list</string> 
    <string name="url_articlelist">find_article_list</string> 
    
    <string name="url_icdealinit">init_onecard_recharge</string>  
    <string name="url_icdealdetail">find_once_onecard_recharge_details</string>  
    <string name="url_icdealorder">recharge_place_an_order</string>  
    <string name="url_icdealrecordlist">find_onecard_recharge_list</string> 
    <string name="url_applyitemlist">find_enter_info_list</string> 
    <string name="url_applyintroduce">find_enter_info</string> 
    <string name="url_applysign">init_enter_only</string>  
    <string name="url_applysignorder">enter_only</string> 
    <string name="url_applysigndetail">find_enter_only_record_details</string> 
    <string name="url_applypay">init_payment_only</string>
    <string name="url_applypayorder">payment_only</string>
    <string name="url_applypaydetail">find_payment_only_record_details</string> 
      
    <string name="url_applysp">init_payment_enter</string>
    <string name="url_applysporder">payment_enter</string>
    <string name="url_applyspdetail">find_enter_payment_record_details</string> 
    <string name="url_applydealrecordlist">find_enter_record_list</string>
    <string name="url_dealpay">immediately_payment_enter</string>
    <string name="url_dealcancel">cancel_payment_enter</string>
    
    <string name="url_uploadportraitimage">upload_portrait_image</string> 
    <string name="tip_launch_copyright">Copyright © 2016-2020 china telecom</string> 
    <string name="tip_launch_version">All rights reserved.Ver.1.0</string> 
    
    <string name="title_back"> 返回</string>
    <string name="net_error">  网络出错  </string> 
    <string name="down_error">下载出错</string> 
    <string name="title_about">关于e云通</string>
    <string name="title_faq">常见问题</string>
    <string name="title_feedback">意见建议</string>
    <string name="title_findpassword">忘记密码</string>
    <string name="title_findupdatepassword">密码修改</string>
    <string name="title_updatepassword">密码修改</string>
    <string name="title_register">注册</string>
    <string name="title_bindphonenumber">修改绑定手机</string>
    <string name="title_person">个人信息</string>
    <string name="title_setting">设置</string>
    
    <string name="title_announce">公示公告</string>
    <string name="title_recruit">招生信息</string>
    <string name="title_new">校园新闻</string>
    <string name="title_employ">就业信息</string>
    <string name="title_mine">我的</string>
    <string name="title_iccard">一卡通充值</string>
    <string name="title_iccardres">充值结果</string>
    <string name="title_iccardbill">一卡通充值账单</string>
    <string name="title_applysign">报名信息</string>
    <string name="title_applysp">报名信息</string>
    <string name="title_applypay">缴费信息</string>
    <string name="title_applydetail">报名详情</string>
    <string name="title_paydetail">缴费详情</string>
    <string name="title_apply">报名缴费</string>
    <string name="title_applybill">报名缴费记录</string>
     
    <string name="text_setting_faq">常见问题</string>
    <string name="text_setting_update">版本更新</string> 
    <string name="text_setting_about">关于e云通</string>
    
    <string name="tip_login_account_hint">请输入帐号(学号/教工号/手机号码)</string>
    <string name="tip_login_password_hint">请输入密码</string>
    
    <string name="tip_login_btn_login">登录</string>
    
    <string name="tip_login_password_remerber">记住密码</string>
    <string name="tip_login_register">校外用户注册</string>
    <string name="silk_captcha">验  证  码:</string>
    <string name="tip_login_password_forget">忘记密码</string>
    <string name="feed_back_location_hint">请输入QQ号码/邮箱地址</string>
    <string name="feed_back_hint">请输入您的反馈意见(必填)</string>
    <string name="feed_back_option_hint"> (选填)</string>
    
    <string name="tip_password_pattern">密码由6-20个英文字母 、阿拉伯数字组成</string>
    <string name="tip_password_hint_confirm">请再次输入新密码</string>
    <string name="tip_password_hint_current">请输入当前密码</string>
    <string name="tip_password_hint_update">请输入新密码</string>
    <string name="tip_password_text_update">当前密码:</string>
    <string name="tip_password_text_current">新的密码:</string>
    <string name="tip_password_text_confirm">确认密码:</string>
    
    <string name="submit_updatepassword">确认修改</string>
    <string name="text_tab_home">首页</string>
    <string name="text_tab_mine">我的</string>
    <string name="text_tab_setting">设置</string>
    
    
    <string name="text_mine_person">个人信息</string>
    <string name="text_mine_bind">更换手机号码</string>
    <string name="text_mine_update">密码修改</string>
    <string name="text_mine_apply">报名缴费记录</string>
    <string name="text_mine_iccard">一卡通充值账单</string>
    
    <string name="text_mine_feedback">意见建议</string>
    
</resources>
