<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/main_bg_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
  <include 
        android:id="@+id/topTitle" 
        layout="@layout/title_bar"  
     />  
    <LinearLayout android:gravity="center_vertical" 
         android:background="@drawable/settings_up_select"  android:layout_width="fill_parent" 
          android:layout_height="@dimen/row_height"  android:layout_marginTop="30.0dip" style="@style/corner_margin_style">
        <TextView android:textSize="@dimen/textSize_normal" android:textColor="@color/list_text_name_color" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tip_password_text_update" />
        <EditText android:textSize="@dimen/textSize_normal" android:maxLength="20" android:textColorHint="@color/list_text_small_color" android:id="@+id/et_CurPassword" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:hint="@string/tip_password_hint_current" android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890" android:inputType="textPassword" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical"  
        android:background="@drawable/settings_mid_select" 
         android:layout_width="fill_parent"  android:layout_height="@dimen/row_height" style="@style/corner_margin_style">
        <TextView android:textSize="@dimen/textSize_normal" android:textColor="@color/list_text_name_color"   android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tip_password_text_current" />
        <EditText android:textSize="@dimen/textSize_normal" android:maxLength="20"  android:textColorHint="@color/list_text_small_color" android:id="@+id/et_NewPassword" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:hint="@string/tip_password_hint_update" android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890" android:inputType="textPassword" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical"   
        android:background="@drawable/settings_down_select"  
        android:layout_width="fill_parent"  
        android:layout_height="@dimen/row_height"  style="@style/corner_margin_style">
        <TextView android:textSize="@dimen/textSize_normal" android:textColor="@color/list_text_name_color" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tip_password_text_confirm" />
        <EditText android:textSize="@dimen/textSize_normal" android:maxLength="20"  android:textColorHint="@color/list_text_small_color" android:id="@+id/et_NewPassword2" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:hint="@string/tip_password_hint_confirm" android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890" android:inputType="textPassword" />
    </LinearLayout>
    <TextView android:textColor="@color/text_color"   android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:text="@string/tip_password_pattern" style="@style/corner_margin_style" />
    
  
    
    
    <Button
                android:id="@+id/btn_UpdatePassword"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="8dip"
                android:layout_marginTop="30dip"
                android:background="@drawable/btn_submit"
                android:shadowColor="#7f000000"
                android:shadowDx="0.0"
                android:shadowDy="1.0"
                android:shadowRadius="1.0"
                
                android:text="@string/submit_updatepassword"
                android:textColor="#ffffff"
                android:textSize="18sp" 
                android:enabled="true"/>
    
</LinearLayout>
