<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0" >

        <Button
            android:id="@+id/btn_TabHome"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:button="@null"
            android:drawableTop="@drawable/tab_home_selector"
            android:gravity="center"
            android:singleLine="true"
            android:tag="home"
            android:text="@string/text_tab_home"
            android:textColor="@color/tab_color_selector"
             android:drawablePadding="2dp"
            android:textSize="14dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0" >

        <Button
            android:id="@+id/btn_TabMine"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:button="@null"
             android:drawablePadding="2dp"
            android:drawableTop="@drawable/tab_mine_selector"
            android:gravity="center"
            android:singleLine="true"
            android:tag="mine"
            android:text="@string/text_tab_mine"
            android:textColor="@color/tab_color_selector"
            android:textSize="14dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0" >

        <Button
            android:id="@+id/btn_TabSetting"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:drawablePadding="2dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:button="@null"
            android:drawableTop="@drawable/tab_setting_selector"
            android:gravity="center"
            android:singleLine="true"
            android:tag="setting"
            android:text="@string/text_tab_setting"
            android:textColor="@color/tab_color_selector"
            android:textSize="14dp" />
    </FrameLayout>

     

</merge>